<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="284dp"
        android:layout_height="386dp"
        android:background="@drawable/fragment_list_tool"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dialog_list_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dialog_list"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/dialog_list_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv1"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_img"/>

        <TextView
            android:id="@+id/dialog_list_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv2"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_tv1"/>

        <TextView
            android:id="@+id/dialog_list_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv3"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_tv2"/>

        <TextView
            android:id="@+id/dialog_list_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv4"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_tv3"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dialog_list_img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dialog_list_img"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_tv4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/dialog_list_tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv5"
            android:textSize="11sp"
            android:textStyle="bold"
            android:layout_marginStart="59dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_img2"/>

        <TextView
            android:id="@+id/dialog_list_tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv6"
            android:textSize="11sp"
            android:textStyle="bold"
            android:layout_marginStart="54dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/dialog_list_tv5"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_img2"/>

        <TextView
            android:id="@+id/dialog_list_tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv7"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_tv6"/>

        <TextView
            android:id="@+id/dialog_list_tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv8"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_tv7"/>

        <TextView
            android:id="@+id/dialog_list_tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_dialog_tv9"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_list_tv8"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>