<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="fragment"
            type="com.pg.gajamap.ui.fragment.setting.SettingFragment" />
        <variable
            name="viewModel"
            type="com.pg.gajamap.viewmodel.ClientViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.setting.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/top_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_btn"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/top_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_tool"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/sv_root"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_box_1"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:background="@drawable/setting_background_gray"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/info_profile_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/setting_profile"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/setting_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_email"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/info_profile_img"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/setting_level_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_level"
            android:textSize="14sp"
            android:textColor="@color/setting_level_yellow"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/info_profile_img"
            app:layout_constraintTop_toBottomOf="@+id/setting_email_tv"/>

        <TextView
            android:id="@+id/setting_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_1"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@+id/setting_level_tv"
            app:layout_constraintTop_toBottomOf="@+id/setting_email_tv"/>

        <TextView
            android:id="@+id/setting_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_date"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/setting_middle"
            app:layout_constraintTop_toBottomOf="@+id/setting_email_tv"/>
        
        <TextView
            android:id="@+id/setting_subscribe_btn"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:background="@drawable/fragment_add_bottom_purple"
            android:text="@string/setting_subscribe"
            android:textColor="@color/white"
            android:paddingTop="3dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/setting_date_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_box_2"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@drawable/setting_background_gray"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_box_1">

        <TextView
            android:id="@+id/setting_add_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_add_1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/setting_excel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_add_2"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_add_1"/>

        <TextView
            android:id="@+id/setting_kakao_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_add_3"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_excel_tv"/>

        <TextView
            android:id="@+id/setting_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_add_4"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_kakao_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_box_3"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:background="@drawable/setting_background_gray"
        android:layout_marginTop="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintTop_toBottomOf="@+id/setting_box_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/setting_use_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_use_1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/setting_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_use_2"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_use_1"/>

        <TextView
            android:id="@+id/setting_version_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_use_3"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/setting_use_1"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/setting_terms_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_use_4"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_version_tv"/>

        <TextView
            android:id="@+id/setting_inquire_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_use_5"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_terms_tv"/>

        <TextView
            android:id="@+id/setting_personal_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_use_6"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_inquire_tv"/>

        <TextView
            android:id="@+id/setting_open_source_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_use_7"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_personal_info_tv"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_box_4"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:background="@drawable/setting_background_gray"
        android:layout_marginTop="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintTop_toBottomOf="@+id/setting_box_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/setting_etc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_etc_1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/setting_withdraw_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_etc_2"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_etc_1"/>

        <TextView
            android:id="@+id/setting_logout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_etc_3"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_withdraw_tv"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>