<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="fragment"
            type="com.pg.gajamap.ui.fragment.setting.ExcelFragment" />
        <variable
            name="viewModel"
            type="com.pg.gajamap.viewmodel.ClientViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/top_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_btn"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/top_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_excel_1"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/setting_excel_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/excel_img"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"/>
    
    <TextView
        android:id="@+id/setting_excel_link"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/main"
        android:text="@string/setting_excel_2"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/setting_excel_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/setting_excel_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_excel_3"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_excel_link"/>

    <TextView
        android:id="@+id/setting_excel_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_excel_4"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_excel_tv1"/>

    <TextView
        android:id="@+id/setting_excel_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_excel_5"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_excel_tv2"/>

    <TextView
        android:id="@+id/setting_excel_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_excel_6"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_excel_tv3"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>